<resources>
    <string name="app_name" translatable="false">Orendis</string>
    <string name="app_full_name" translatable="false">Orendis Sport Tracker</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_training">Training</string>
    <string name="preference_file_key" translatable="false">gpsdata</string>
    <string name="notification_message">Tracking workout</string>
    <string name="ticker_text">Orendis tracking your training</string>
    <string name="altitude">Altitude</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="speed">Speed</string>
    <string name="max_speed">Max speed</string>
    <string name="distance">Distance</string>
    <string name="average_speed">Avg. speed</string>
    <string name="max_altitude">Max altitude</string>
    <string name="training_result">Result of training</string>
    <string name="cancel">Cancel</string>
    <string name="ok" translatable="false">OK</string>
    <string name="title_cancel_training">Cancel training?</string>
    <string name="message_cancel_training">Cancelling a training will delete all data about it. Are you sure?</string>
    <string name="traning_description">Description</string>
    <string name="map">Map</string>
    <string name="compass">Compass</string>
    <string name="zero" translatable="false">0</string>
    <string name="total_time">Duration</string>
    <string name="date">Date</string>
    <string name="finish_time">Completed</string>
    <string name="elevation_gain">Elevation gain</string>
    <string name="elevation_loss">Elevation loss</string>
    <string name="stats">Statistics</string>
    <string name="trip_removed">Training removed</string>
    <string name="low_gps_signal_title">Low GPS-signal</string>
    <string name="low_gps_signal_message">A log GPS signal will increase errors in determining your location. Do you still begin training?</string>
    <string name="backup_database">Backup database</string>
    <string name="external_storage_not_available">External storage not available</string>
    <string name="backup_database_success">Database successfully exported</string>
    <string name="backup_database_fail">Database export error</string>
    <string name="map_normal">Map</string>
    <string name="map_satellite">Satellite</string>
    <string name="map_hybrid">Hybrid</string>
    <string name="map_terrain">Terrain</string>
    <string name="info">Info</string>
    <string name="short_traning_title">Short training</string>
    <string name="short_training_message">Training is too short: data will not be saved</string>
    <string name="zero_time" translatable="false">00:00:00</string>
    <string name="m">m</string>
    <string name="km">km</string>
    <string name="kmch">km/h</string>
    <string name="save">Save</string>

    <string name="start">Start</string>
    <string name="finish">Finish</string>
    <string name="export">Export</string>
    <string name="export_to_gpx">GPX-track</string>
    <string name="export_to_kml">KML-track</string>
    <string name="uphill">Uphill</string>
    <string name="downhill">Downhill</string>
    <string name="plain">Plain</string>
    <string name="restore_database_fail">Database restore error</string>
    <string name="restoure_database_success">Database restore successfully</string>
    <string name="restore_database">Restore database</string>
    <string name="feedback">Feedback</string>
    <string name="send_mail">Send mail</string>
    <string name="other">Other</string>
    <string name="social_network">We in social network</string>
    <string name="rate_app">Rate</string>
    <string name="pref_email" translatable="false">artemyankovskiy@gmail.com</string>
    <string name="pref_selectEmailApplication">Choose app for send mail</string>
    <string name="facebook">Facebook</string>
    <string name="vk">VK</string>
    <string name="gplus">Google+</string>
    <string name="track_export_success">Track successfully export to the file</string>
    <string name="track_export_fail">Error while exporting the track to file</string>
    <string name="change">Edit</string>
    <string name="kml_description">Track created in Orendis Sport Tracker</string>
    <string name="road_bike">Road bike</string>
    <string name="choose_activity_type">Choose training type</string>
    <string name="walking">Walking</string>
    <string name="nordic_walking">Nordic walking</string>
    <string name="hiking">Hiking</string>
    <string name="run">Run</string>
    <string name="mtb">MTB</string>
    <string name="regenerate_thumbnail">Update thumbnail</string>
    <string name="regerate_successfully">Thumbnail updated</string>
    <string name="regerate_fail">Thumbnail update error</string>
    <string name="title_gps_not_found">GPS-sensor not found</string>
    <string name="message_gps_not_found">\"Airplan mode\" must be off and your device must have GPS sensor</string>
    <string name="skateboard">Skateboard</string>
    <string name="settings_latitude_longitude_format_title">Latitude and longitude format</string>
    <string name="settings_display_coordinate_modern">Decimal degrees</string>
    <string name="settings_display_coordinate_hystorical">Degrees, minutes and seconds</string>
    <string name="settings_autopause">Autopause</string>
    <string name="settings_autopause_off">Timer does not stop if you are stop your activity</string>
    <string name="settings_autopause_on">Stop timer if you are stop your activity</string>
    <string name="pause_duration">Pause</string>
    <string name="clean_time">Clean time</string>
    <string name="map_not_ready">Map not ready</string>
</resources>
