<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_training"
            android:checked="true"
            android:icon="@drawable/ic_menu_training"
            android:title="@string/action_training" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_menu_stats"
            android:title="@string/stats" />
    </group>

    <item android:title="@string/feedback">
        <menu>
            <item
                android:id="@+id/nav_rate_app"
                android:icon="@drawable/ic_menu_rate"
                android:title="@string/rate_app" />

            <item
                android:id="@+id/nav_social_network"
                android:icon="@drawable/ic_menu_social"
                android:title="@string/social_network" />

            <item
                android:id="@+id/nav_send_mail"
                android:icon="@drawable/ic_menu_mail"
                android:title="@string/send_mail" />
        </menu>
    </item>

    <item android:title="@string/other" android:id="@+id/nav_other">
        <menu>
            <item
                android:visible="false"
                android:id="@+id/nav_restore_db"
                android:icon="@drawable/ic_menu_restore_database"
                android:title="@string/restore_database"/>
            <item
                android:visible="false"
                android:id="@+id/nav_backup_db"
                android:icon="@drawable/ic_menu_backup_database"
                android:title="@string/backup_database" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/action_settings" />
        </menu>
    </item>
</menu>
