<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="@layout/content_training_finish_acitivty">

    <TextView
        android:id="@+id/finish_time"
        style="@style/StatField"
        android:drawableLeft="@drawable/ic_time"
        android:drawableStart="@drawable/ic_time"
        android:text="@string/finish_time" />

    <TextView
        android:id="@+id/finish_time_value"
        style="@style/StatFieldValue"
        android:layout_alignBaseline="@+id/finish_time"
        android:text="@string/zero_time" />
    <!---->
    <TextView
        android:id="@+id/distance"
        style="@style/StatField"
        android:layout_below="@+id/finish_time"
        android:drawableLeft="@drawable/ic_distance"
        android:drawableStart="@drawable/ic_distance"
        android:text="@string/distance" />

    <TextView
        android:id="@+id/distance_value"
        style="@style/StatFieldValue"
        android:layout_alignBaseline="@+id/distance"
        android:text="@string/zero" />
    <!---->
    <TextView
        android:id="@+id/total_time"
        style="@style/StatField"
        android:layout_below="@+id/distance"
        android:drawableLeft="@drawable/ic_duration"
        android:drawableStart="@drawable/ic_duration"
        android:text="@string/total_time" />

    <TextView
        android:id="@+id/total_time_value"
        style="@style/StatFieldValue"
        android:layout_alignBaseline="@+id/total_time"
        android:text="@string/zero_time" />
    <!---->
    <TextView
        android:visibility="gone"
        android:id="@+id/pause_duration"
        style="@style/StatField"
        android:layout_below="@+id/total_time"
        android:drawableLeft="@drawable/ic_pause"
        android:drawableStart="@drawable/ic_pause"
        android:text="@string/pause_duration" />

    <TextView
        android:visibility="gone"
        android:id="@+id/pause_duration_value"
        style="@style/StatFieldValue"
        android:layout_alignBaseline="@+id/pause_duration"
        android:text="@string/zero_time" />
    <!---->
    <TextView
        android:id="@+id/average_speed"
        style="@style/StatField"
        android:layout_below="@+id/pause_duration"
        android:drawableLeft="@drawable/ic_avgspeed"
        android:drawableStart="@drawable/ic_avgspeed"
        android:text="@string/average_speed" />

    <TextView
        android:id="@+id/average_speed_value"
        style="@style/StatFieldValue"
        android:layout_alignBaseline="@+id/average_speed"
        android:text="@string/zero" />
    <!---->
    <TextView
        android:id="@+id/max_speed"
        style="@style/StatField"
        android:layout_below="@+id/average_speed"
        android:drawableLeft="@drawable/ic_maxspeed"
        android:drawableStart="@drawable/ic_maxspeed"
        android:text="@string/max_speed" />

    <TextView
        android:id="@+id/max_speed_value"
        style="@style/StatFieldValue"
        android:layout_alignBaseline="@+id/max_speed"
        android:text="@string/zero" />
    <!---->
    <TextView
        android:id="@+id/max_altitude"
        style="@style/StatField"
        android:layout_below="@+id/max_speed"
        android:drawableLeft="@drawable/ic_altitude"
        android:drawableStart="@drawable/ic_altitude"
        android:text="@string/max_altitude" />

    <TextView
        android:id="@+id/max_altitude_value"
        style="@style/StatFieldValue"
        android:layout_alignBaseline="@+id/max_altitude"
        android:text="@string/zero" />
    <!---->
    <TextView
        android:id="@+id/up_altitude"
        style="@style/StatField"
        android:layout_below="@id/max_altitude"
        android:drawableLeft="@drawable/ic_ascend"
        android:drawableStart="@drawable/ic_ascend"
        android:text="@string/elevation_gain" />

    <TextView
        android:id="@+id/up_altitude_value"
        style="@style/StatFieldValue"
        android:layout_alignBaseline="@+id/up_altitude"
        android:text="@string/zero" />
    <!---->
    <TextView
        android:id="@+id/down_altitude"
        style="@style/StatField"
        android:layout_below="@id/up_altitude"
        android:drawableLeft="@drawable/ic_descend"
        android:drawableStart="@drawable/ic_descend"
        android:text="@string/elevation_loss" />

    <TextView
        android:id="@+id/down_altitude_value"
        style="@style/StatFieldValue"
        android:layout_alignBaseline="@+id/down_altitude"
        android:text="@string/zero" />
    <!---->
    <TextView
        style="@style/TrainDescription"
        android:id="@+id/description"
        android:layout_below="@+id/down_altitude" />
</merge>