<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.neverdark.csm.fragments.InfoTabFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/a1"
                android:layout_alignParentTop="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ru.neverdark.widgets.DataCard
                    android:id="@+id/distance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:title="@string/distance" />

                <ru.neverdark.widgets.DataCard
                    android:id="@+id/speed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    app:title="@string/speed" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/a2"
                android:layout_below="@+id/a1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <ru.neverdark.widgets.DataCard
                    android:id="@+id/average_speed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:title="@string/average_speed" />

                <ru.neverdark.widgets.DataCard
                    android:id="@+id/max_speed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    app:title="@string/max_speed" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/a3"
                android:layout_below="@+id/a2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <ru.neverdark.widgets.DataCard
                    android:id="@+id/altitude"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:title="@string/altitude" />

                <ru.neverdark.widgets.DataCard
                    android:id="@+id/max_altitude"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    app:title="@string/max_altitude" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/a4"
                android:layout_below="@+id/a3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <ru.neverdark.widgets.DataCard
                    android:id="@+id/up_altitude"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:title="@string/elevation_gain" />

                <ru.neverdark.widgets.DataCard
                    android:id="@+id/down_altitude"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    app:title="@string/elevation_loss" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/a5"
                android:layout_below="@+id/a4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <ru.neverdark.widgets.DataCard
                    android:id="@+id/up_distance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:title="@string/uphill" />

                <ru.neverdark.widgets.DataCard
                    android:id="@+id/down_distance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    app:title="@string/downhill" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/a6"
                android:layout_below="@+id/a5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <ru.neverdark.widgets.DataCard
                    android:id="@+id/latitude"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:title="@string/latitude" />

                <ru.neverdark.widgets.DataCard
                    android:id="@+id/longitude"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    app:title="@string/longitude" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/prev_tab"
        style="@style/PrevTabButton" />

    <ImageView
        android:id="@+id/next_tab"
        style="@style/NextTabButton" />

</RelativeLayout>
